welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:102: error: identifier expected but 'override' found.
def override resolution() {
    ^